--- a/src/main/java/view/DlgStatusSaida.form
+++ b/src/main/java/view/DlgStatusSaida.form
@@ -7,7 +7,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
-    <Property name="title" type="java.lang.String" value="Relat&#xf3;rio de Entregas"/>
+    <Property name="title" type="java.lang.String" value="Modificar Status de Pacote"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
