--- a/src/main/java/view/FrmPrincipal.form
+++ b/src/main/java/view/FrmPrincipal.form
@@ -180,12 +180,12 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
                               <Component id="txtDev" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace pref="208" max="32767" attributes="0"/>
+                              <EmptySpace pref="210" max="32767" attributes="0"/>
                               <Component id="txtBD" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <Group type="102" attributes="0">
+                          <Group type="102" alignment="0" attributes="0">
                               <Component id="jPanel2" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+                              <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Component id="jPanel3" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
@@ -255,8 +255,10 @@
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="txtDev" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="txtBD" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" alignment="0" groupAlignment="3" attributes="0">
+                      <Component id="txtDev" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="txtBD" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
                   <Component id="txtVersao" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="7" max="32767" attributes="0"/>
@@ -278,7 +280,7 @@
     <Component class="javax.swing.JButton" name="btnBuscar">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/imagens/png/16x16/database_search.png"/>
+          <Image iconType="3" name="/imagens/png/16x16/lupa.png"/>
         </Property>
       </Properties>
       <Events>
@@ -298,12 +300,12 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace pref="14" max="32767" attributes="0"/>
-                  <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                      <Component id="btnEntregador" alignment="1" pref="177" max="32767" attributes="0"/>
-                      <Component id="btnCliente" alignment="1" pref="177" max="32767" attributes="0"/>
+                  <EmptySpace pref="20" max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Component id="btnEntregador" max="32767" attributes="0"/>
+                      <Component id="btnCliente" max="32767" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -323,7 +325,7 @@
         <Component class="javax.swing.JButton" name="btnEntregador">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/imagens/png/24x24/user_add.png"/>
+              <Image iconType="3" name="/imagens/png/24x24/do-utilizador (1).png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Cadastrar Entregador"/>
           </Properties>
@@ -334,9 +336,9 @@
         <Component class="javax.swing.JButton" name="btnCliente">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/imagens/png/24x24/user_add.png"/>
+              <Image iconType="3" name="/imagens/png/24x24/do-utilizador (1).png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value=" Cadastrar Cliente"/>
+            <Property name="text" type="java.lang.String" value=" Cadastro de Cliente"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mnuCadClienteActionPerformed"/>
@@ -368,7 +370,7 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="btnSaida" min="-2" pref="159" max="-2" attributes="0"/>
@@ -382,7 +384,7 @@
                           </Group>
                       </Group>
                   </Group>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -404,7 +406,7 @@
         <Component class="javax.swing.JButton" name="btnSaida">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/imagens/png/24x24/down.png"/>
+              <Image iconType="3" name="/imagens/png/24x24/saida (1).png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="   Nova Sa&#xed;da"/>
           </Properties>
@@ -415,7 +417,7 @@
         <Component class="javax.swing.JButton" name="btnEntrada">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/imagens/png/24x24/up.png"/>
+              <Image iconType="3" name="/imagens/png/24x24/caixa-de-entrada (1).png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Nova Entrada"/>
           </Properties>
@@ -426,7 +428,7 @@
         <Component class="javax.swing.JButton" name="btnStatus">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/imagens/png/24x24/info.png"/>
+              <Image iconType="3" name="/imagens/png/24x24/info (1).png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Status Entrega"/>
           </Properties>
@@ -486,13 +488,13 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="btnRelatorioSaida" max="32767" attributes="0"/>
-                      <Component id="btnRelatorioEntrega" pref="187" max="32767" attributes="0"/>
+                  <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="1" max="-2" attributes="0">
                       <Component id="btnRelatorioEntrada" alignment="0" max="32767" attributes="0"/>
+                      <Component id="btnRelatorioEntrega" alignment="0" max="32767" attributes="0"/>
+                      <Component id="btnRelatorioSaida" max="32767" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="19" max="32767" attributes="0"/>
+                  <EmptySpace pref="20" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -514,7 +516,7 @@
         <Component class="javax.swing.JButton" name="btnRelatorioSaida">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/imagens/png/24x24/database_down.png"/>
+              <Image iconType="3" name="/imagens/png/24x24/relatorio (1).png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Relat&#xf3;rio de  Sa&#xed;das"/>
           </Properties>
@@ -525,9 +527,9 @@
         <Component class="javax.swing.JButton" name="btnRelatorioEntrega">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/imagens/png/24x24/home_next.png"/>
+              <Image iconType="3" name="/imagens/png/24x24/relatorio (1).png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Relat&#xf3;rio de Entregas"/>
+            <Property name="text" type="java.lang.String" value="Relat&#xf3;rio Entregas"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRelatorioEntregaActionPerformed"/>
@@ -536,7 +538,7 @@
         <Component class="javax.swing.JButton" name="btnRelatorioEntrada">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/imagens/png/24x24/database_up.png"/>
+              <Image iconType="3" name="/imagens/png/24x24/relatorio (1).png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Relat&#xf3;rio Entradas"/>
           </Properties>
@@ -567,7 +569,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="10" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Vers&#xe3;o: 0.1 Beta"/>
+        <Property name="text" type="java.lang.String" value="Vers&#xe3;o: 0.1.3 Beta"/>
       </Properties>
     </Component>
   </SubComponents>
